--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,185 @@
-.App {
-  text-align: center;
+* {
+  transition: background-color 0.3s ease;
+}
+html,body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Josefin Sans', sans-serif;
+}
+#root {
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#main {
+  height: 100%;
+  width: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#main.light-theme {
+  background-image: url(../images/bg-desktop-light.jpg);
+  background-color: hsl(0, 0%, 98%);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#main.dark-theme {
+  background-image: url(../images/bg-desktop-dark.jpg);
+  background-color: rgba(24,24,36,255);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.main-body {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 100px;
+}
+
+.header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.header-title p {
+  font-size: 40px;
+  text-transform: capitalize;
   color: white;
+  letter-spacing: 0.3em;
+  margin: 0px;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.header-change-theme {
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-change-theme.light-theme{
+  content: url("../images/icon-moon.svg");
+}
+
+.header-change-theme.dark-theme {
+  content: url("../images/icon-sun.svg");
+}
+
+.custom-todo-input-new-container {
+  margin-top: 30px;
+}
+
+.custom-todo-input {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  padding-left: 15px;
+  border: 1px solid white;
+  border-radius: 5px;
+  align-items: center;
+}
+
+.custom-todo-input.dark-theme {
+  background-color: #25273c;
+  border-color: #25273c;
+}
+
+.activator-anchor {
+  display: inline-block;
+  border: 1px solid hsl(0, 0%, 95%);
+  border-radius: 50%;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+}
+
+.activator-anchor.dark-theme {
+  border: 1px solid  #2e3044;
+}
+
+.activator-anchor:hover {
+  border-color: hsl(280, 87%, 65%);
+}
+
+.activator-anchor.activated {
+  background: linear-gradient(hsl(192, 100%, 67%),hsl(280, 87%, 65%));
+  border:0;
+}
+
+.custom-todo-input.light-theme {
+  background-color: white;
+}
+
+.activated .finished-todo {
+  padding-left: 30%;
+  padding-top:30%;
+  content: url("../images/icon-check.svg");
+}
+
+.custom-todo-text {
+  width: 85%;
+  margin-left: 10px;
+  height: 100%;
+}
+
+.text-input {
+  border: 0;
+  font-size: 14px;
+  width: 85%;
+}
+
+.text-input.dark-theme {
+  background-color: #25273c;
+  color: #676980;
+}
+
+.text-input:focus-visible {
+  border: 0;
+  outline: none;
+}
+
+.text-input.activated {
+  text-decoration: line-through;
+  color:hsl(0, 0%, 40%);
+}
+
+.todosContainer {
+  margin-top: 40px;
+  border: 1px solid hsl(0, 0%, 95%);
+  border-radius: 5px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+.todosContainer.light-theme {
+  background-color: hsl(0, 0%, 95%);
+}
+
+.todosContainer.dark-theme {
+  background-color: #25273c;
+  border-color:  #25273c;
+}
+
+.todosContainer .custom-todo-input {
+  border-radius: 0;
+}
+
+.todosContainer .custom-todo-input:first-child{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.todosContainer .custom-todo-input:last-child{
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.remove-todo {
+  padding-top: 5px;
+}
+
+.remove-todo-icon {
+  content: url("../images/icon-cross.svg");
 }
